--- a/run.html
+++ b/run.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="head">
-        <a href="index.html"><h1 id="title">Refresh Me</h1></a>
+        <h1 id="title">Refresh Me</h1>
     </div>
     <div class="dices row">
         <div class="player 1 col-6">
@@ -29,11 +29,10 @@
         </div>
     </div>
     <div class="button">
-        <a href="run.html"><button type="button" class="btn btn-outline-info btn-lg reDo">ReDo</button></a>
+        <a href="index.html"><button type="button" class="btn btn-outline-info btn-lg reDo">Roll It</button></a>
     </div>
     <div class="copyright">
         <p>&#169; avneet_singh</p>
     </div>
-    <script src="index.js"></script>
 </body>
 </html>
