--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div class="button">
-        <a href="index.html"><button type="button" class="btn btn-outline-info btn-lg reDo">Roll It</button></a>
+        <a href="run/run.html"><button type="button" class="btn btn-outline-info btn-lg reDo">Roll It</button></a>
     </div>
     <div class="copyright">
         <p>&#169; avneet_singh</p>
